--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="footer">
             <button onclick="change(-1)"><i class="fa-solid fa-backward"></i></button>
-            <button onclick="playPause()"><i class="fa-solid fa-play active"></i></button>
+            <button onclick="playPause()" id="playButton">⏵︎</button>
             <button onclick="change(1)"><i class="fa-solid fa-forward"></i></button>
         </div>
     </div>
